# customers

./: README.md  customers.cabal
data/test/: multiple_customers.txt  one_customer.txt
src/: CustomersParsing.hs  Distance.hs  ListGuests.hs  Main.hs
test/: Spec.hs
