name:                customers
version:             1.0.0.0
synopsis:            Customers Analysis
author:              Laetitia Lachat
maintainer:          lachatl@tcd.ie
category:            JSON
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:      base,
                      directory,
                      time

  hs-source-dirs:     src/
  default-language:   Haskell2010

executable customers
  main-is:            Main.hs
  build-depends:      base,
                      directory,
                      time,
                      aeson,
                      bytestring
  other-modules:      CustomersParsing,
                      Distance,
                      ListGuests

  hs-source-dirs:     src/
  default-language:   Haskell2010

test-suite Main
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  x-uses-tf: true
  build-depends:  base,
                  directory,
                  aeson,
                  bytestring,
                  time,
                  HUnit,
                  test-framework,
                  test-framework-hunit,
                  test-framework-quickcheck2
  other-modules:  CustomersParsing
                  Distance
                  ListGuests
  hs-source-dirs: test, src
  default-language: Haskell2010
